# PP2024-Image-Stiching-Acceleration

./: README.md
SIFT-Optimizing/: CMakeLists.txt  FindKeypoints.sh  ImageStitching.sh  MatchFeatures.sh  README.md  notes.md  profile.py  stitch.sh
SIFT-Optimizing/examples/: CMakeLists.txt  find_keypoints.cpp  image_stitching.cpp  match_features.cpp
SIFT-Optimizing/examples_seq/: CMakeLists.txt  find_keypoints.cpp  image_stitching.cpp  match_features.cpp
SIFT-Optimizing/src/: CMakeLists.txt  image.cpp  sift.cpp  sift.hpp
SIFT-Optimizing/src_seq/: sift_backup.cpp
